crates/swc_ecma_parser/tests/test262-error-references/fail/ebd282af4fda397d.js.stderr
error: Not a pattern
 --> $DIR/tests/test262-parser/fail/ebd282af4fda397d.js:1:2
  |
1 | (10, 20) => 0
  |  ^^

error: Not a pattern
 --> $DIR/tests/test262-parser/fail/ebd282af4fda397d.js:1:6
  |
1 | (10, 20) => 0
  |      ^^

